// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`renderLeaf snapshot matches expected output 1`] = `
"---
title: "Test Leaf"
aliases: []
type: LEAF
kind: concept
spine: myproj
status: draft
parent: "[[MYPROJ.ROOT - My Project]]"
children: []
attachments: []
created: 2026-03-26
modified: 2026-03-26
tags: []
---

## Breadcrumb

## Summary

## Content

## Connections

## Flags
"
`;

exports[`renderBranch snapshot matches expected output 1`] = `
"---
title: "Test Branch"
aliases: []
type: BRANCH
kind: concept
spine: myproj
status: draft
parent: "[[MYPROJ.ROOT - My Project]]"
children: []
attachments: []
created: 2026-03-26
modified: 2026-03-26
tags: []
---

## Breadcrumb

## Summary

## Content

## Connections

## Flags
"
`;

exports[`renderRoot snapshot matches expected output 1`] = `
"---
title: "My Project"
aliases: []
type: ROOT
kind: concept
spine: myproj
status: draft
parent: ""
children: []
attachments: []
created: 2026-03-26
modified: 2026-03-26
tags: []
---

## Summary

## Map

## Connections

## Flags
"
`;

exports[`renderOntology snapshot matches expected output 1`] = `
"---
type: ONTOLOGY
project: myproj
updated: 2026-03-26
---

## Relationship Types

| Type | Inverse | Symmetric | Description |
|------|---------|-----------|-------------|
| \`triggers\` | \`triggered-by\` | false | A causes B to occur |
| \`depends-on\` | \`depended-by\` | false | A requires B to function |
| \`implements\` | \`implemented-by\` | false | A is a concrete realisation of abstract concept B |
| \`extends\` | \`extended-by\` | false | A adds to or specialises B |
| \`compares-to\` | \`compares-to\` | true | A and B are analysed side-by-side |
| \`replaces\` | \`replaced-by\` | false | A supersedes B |
| \`feeds-data\` | \`fed-by\` | false | A supplies data to B |
| \`authenticates-via\` | \`authenticates\` | false | A uses B for authentication |
| \`contains\` | \`contained-by\` | false | A is the parent container of B |
| \`mitigates\` | \`mitigated-by\` | false | A reduces risk posed by B |
"
`;

exports[`renderVocab snapshot matches expected output 1`] = `
"---
type: VOCAB
project: myproj
updated: 2026-03-26
---

## L0 — Spine Roots

## L1 — Primary Branches

## L2 — Secondary Branches

## L3 — Leaves

## Shared Terms

## Orphan Terms
"
`;

exports[`renderTopk snapshot matches expected output 1`] = `
"---
type: TOPK
project: myproj
updated: 2026-03-26
---

## Limits

| Metric | Limit | Rationale |
|--------|-------|-----------|
| Connections per note | 7 | Prevents over-linking; forces pruning |
| Callout flags per note | 3 | Keeps flags scannable |
| BRANCH children | 7 | Keeps tree manageable |
| LEAF children | 5 | LEAF nodes should not branch deeply |

## Overflow Log

| Date | Note | Field | Count | Action |
|------|------|-------|-------|--------|

## Split History

| Date | Original | Split Into | Reason |
|------|----------|------------|--------|
"
`;

exports[`renderBase snapshot matches expected output 1`] = `
"filters:
  - file.inFolder("projects/myproj")
formulas:
  status_icon: 'if(status == "published", "✅", if(status == "review", "🔍", if(status == "draft", "📝", "⬜")))'
  last_updated: 'modified'
  link_count: 'file.outlinks.length'
views:
  - type: table
    name: All Notes
    order:
      - file.name
      - formula.status_icon
      - type
      - kind
      - spine
      - created
      - formula.last_updated
  - type: table
    name: Drafts
    filters:
      and:
        - 'status == "draft"'
    order:
      - file.name
      - type
      - kind
      - created
  - type: table
    name: Browse
    order:
      - file.name
      - type
      - kind
      - formula.link_count
      - formula.last_updated
"
`;
